examples/test/testpolicy5372.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5372
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key11: value37
      key35: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value24
      podSelector:
        matchLabels:
          key23: value24
          key4: value34
          key13: value27
